--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #da9195; }
+  background: #11270d; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #1e54b2; }
+  background: #58357c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #27b97d; }
+  background: #a0232f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #fa1320; }
+  background: #a5e683; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b86ea7; }
+  background: #13f869; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #5612cf; }
+  background: #b0c170; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #01192e; }
+  background: #524ed8; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #085496; }
+  background: #99ad43; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #1de9b9; }
+  background: #796773; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #12a545; }
+  background: #bcd84e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #869980; }
+  background: #ff0d20; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f16003; }
+  background: #75e652; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #58a730; }
+  background: #51b6a6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #cd9e04; }
+  background: #0d4916; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6ee0a4; }
+  background: #a0c455; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5025c7; }
+  background: #d99514; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #40ce26; }
+  background: #1b9745; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #08176b; }
+  background: #1763f2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #7d1fdb; }
+  background: #62ea35; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f33050; }
+  background: #82c34a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #42338a; }
+  background: #205568; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ef81d3; }
+  background: #640913; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ad63fd; }
+  background: #12ea8c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7afe12; }
+  background: #401b6a; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0a63b4; }
+  background: #129a22; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7fba29; }
+  background: #128e7d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #5ff2a5; }
+  background: #12408d; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #610890; }
+  background: #d635e9; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #da271b; }
+  background: #c5f11e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3274d4; }
+  background: #a43666; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9ae3da; }
+  background: #89ba9f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #88f244; }
+  background: #b9da6d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0e3a80; }
+  background: #88a97d; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #edd7e3; }
+  background: #f70209; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #91643f; }
+  background: #7ff291; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ee9801; }
+  background: #174a91; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9a07c0; }
+  background: #995f7a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ea1436; }
+  background: #160fe2; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #c2e862; }
+  background: #056b05; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7a31b7; }
+  background: #9f4281; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #59caa9; }
+  background: #6fed87; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #bfca9d; }
+  background: #50a4bc; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #57bdc3; }
+  background: #32ce58; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #65d619; }
+  background: #331d42; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #45455f; }
+  background: #ec67fb; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d4287a; }
+  background: #b57c82; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #41ae05; }
+  background: #c03e88; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #40212c; }
+  background: #76f220; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #455a58; }
+  background: #0f8fc1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #9d7445; }
+  background: #59bbe5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #936ff5; }
+  background: #2d336b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #3c578f; }
+  background: #f99cf4; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #abd5e5; }
+  background: #f64e04; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #afa708; }
+  background: #3209d4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d9f871; }
+  background: #a6b5c2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #618f2d; }
+  background: #3049af; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #f3c1c9; }
+  background: #a693a1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6f1c74; }
+  background: #a69a0a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #489559; }
+  background: #0bff49; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #58aa3d; }
+  background: #6a832b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #75561e; }
+  background: #a67740; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #eaf4d9; }
+  background: #0e1a2e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4c5b74; }
+  background: #9ff99a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #95cb24; }
+  background: #4d4c13; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #b6ce49; }
+  background: #fa69d2; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #6a02a0; }
+  background: #5c7c37; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #ee8c90; }
+  background: #03bb79; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #26e7a4; }
+  background: #a1db94; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a3bc4e; }
+  background: #c86f6c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ab9571; }
+  background: #84fffa; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5e70f2; }
+  background: #25a6dd; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #427988; }
+  background: #cf9714; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #cf14bb; }
+  background: #db6c89; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #5f20c4; }
+  background: #486068; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #65da05; }
+  background: #16f00e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #03c877; }
+  background: #1db058; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3f0ab8; }
+  background: #11aa23; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1b5b9c; }
+  background: #37f41b; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a5d83d; }
+  background: #ae789c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #b3a5f8; }
+  background: #e36b1e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b45312; }
+  background: #dacd1c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #66a6b4; }
+  background: #802d2b; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #ae95a9; }
+  background: #5cc0c2; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c269d6; }
+  background: #7e50fb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #59c3d7; }
+  background: #d3a27f; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #6e9aba; }
+  background: #8d558f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #ea3ad4; }
+  background: #d4acfd; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0fee7d; }
+  background: #76be7d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e970b0; }
+  background: #e6fe5f; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #87dff8; }
+  background: #1706b4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8c618b; }
+  background: #4f687f; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3391a6; }
+  background: #a66704; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0bf329; }
+  background: #f761c0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9da181; }
+  background: #6e0e66; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f1606f; }
+  background: #c8b7a9; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #bd8412; }
+  background: #ddd78e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #68a4a5; }
+  background: #a09d2e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #0c176b; }
+  background: #85300a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a517d3; }
+  background: #2348f2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #8e36bc; }
+  background: #72a93d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
