--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #fdbed6; }
+  background: #fbe064; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6ba0bb; }
+  background: #51d315; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ae8b3b; }
+  background: #29c8ad; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #82b72b; }
+  background: #367c60; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f38389; }
+  background: #377408; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9b98db; }
+  background: #1939a1; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #1f0ec7; }
+  background: #24ecf3; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6168f6; }
+  background: #2f5343; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #5ec17d; }
+  background: #cd969c; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #013947; }
+  background: #4e4f76; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6c9997; }
+  background: #32814a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #298ac8; }
+  background: #44b2c2; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #9f4494; }
+  background: #ff7b63; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #fdc459; }
+  background: #c8f05b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #9357ce; }
+  background: #5e47c9; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0c9725; }
+  background: #0a2d4a; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #d6e464; }
+  background: #824f8f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #639bea; }
+  background: #3de2f6; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #93866a; }
+  background: #78d984; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b7adf3; }
+  background: #3f8e03; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #8279fc; }
+  background: #0874a4; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #efe08d; }
+  background: #e7f155; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7d4cd7; }
+  background: #a8efbf; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #913bed; }
+  background: #36adf2; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f4a5c7; }
+  background: #e93ee7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #3e9ecd; }
+  background: #15d15d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a492fb; }
+  background: #825613; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7579d0; }
+  background: #b42851; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ef927c; }
+  background: #9eab4e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #104e89; }
+  background: #88c798; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d65e6d; }
+  background: #d0e75d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #145747; }
+  background: #62e045; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0a0d87; }
+  background: #5f169a; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #653f3f; }
+  background: #84df27; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6865ff; }
+  background: #f940f1; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c20729; }
+  background: #08ff43; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #6d1c4f; }
+  background: #66b2f9; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #14e7b2; }
+  background: #709cd6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #79aaaa; }
+  background: #deb0d0; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #70bb48; }
+  background: #d070c7; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #df9d49; }
+  background: #e0c86b; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6be395; }
+  background: #668a59; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #bbc5c5; }
+  background: #21373a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #93e6d4; }
+  background: #500c5d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #34541a; }
+  background: #9d9351; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #30fbfb; }
+  background: #7f6d1a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b0bd23; }
+  background: #9e3120; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5855ba; }
+  background: #3eb60b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #59343f; }
+  background: #f505db; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a3aed6; }
+  background: #0f33b5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #071fc8; }
+  background: #5572c9; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c98415; }
+  background: #5616b1; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #fa3635; }
+  background: #8f999d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8a9957; }
+  background: #736e81; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c733c5; }
+  background: #b8c71e; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #b3324a; }
+  background: #126eb5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4c1e63; }
+  background: #38eb6a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5c253f; }
+  background: #e5ad57; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #77f77d; }
+  background: #9a2f90; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #7919a9; }
+  background: #2ad155; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #cd1c75; }
+  background: #a2748e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #78a44e; }
+  background: #f50d92; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #0b4f20; }
+  background: #4391fc; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #31db19; }
+  background: #1f781a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #bec427; }
+  background: #81e5b0; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a5c9fb; }
+  background: #066e69; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3f6a4b; }
+  background: #c7f1bd; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #816b31; }
+  background: #aa237e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #60fadd; }
+  background: #06d5b4; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #b8876f; }
+  background: #76d8f6; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #6b1b7c; }
+  background: #0fe053; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #555e13; }
+  background: #57d86d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #e10bee; }
+  background: #926c6d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #330421; }
+  background: #ce45d0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #434d2f; }
+  background: #9bb187; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #8d5ae7; }
+  background: #4ba64a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #6ad332; }
+  background: #b4c4c4; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #081783; }
+  background: #f3e212; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4e78ac; }
+  background: #dc746e; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c9c82b; }
+  background: #79d997; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #de9d5a; }
+  background: #740b81; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5ef82a; }
+  background: #b2d6f5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1b4eab; }
+  background: #c1254c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c89580; }
+  background: #7cc6bf; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4ae48b; }
+  background: #584bc4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #252799; }
+  background: #655275; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e3a28a; }
+  background: #e3d763; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #aa7467; }
+  background: #926e29; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #84f72b; }
+  background: #b487c2; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #447065; }
+  background: #70b1a8; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8a8557; }
+  background: #7d3732; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #e5e506; }
+  background: #421e50; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #01964c; }
+  background: #2e83d3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ab764b; }
+  background: #27c6ac; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #197449; }
+  background: #69ed05; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #2f63d8; }
+  background: #f54a73; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #4089fa; }
+  background: #cd2791; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9ea299; }
+  background: #ace1eb; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1867b8; }
+  background: #b2c438; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #32e392; }
+  background: #42a754; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9172,7 +9172,7 @@ th {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
   flex-direction: column; }
   .dashboard-top-section-query .search-wrap {
     display: flex;
@@ -9286,6 +9286,9 @@ th {
   color: white; }
   .theme-btn:hover {
     background: #8565d1; }
+
+.theme-btn-big {
+  padding: 12px 22px; }
 
 .theme-btn-small {
   padding: 8px 20px;
