--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2016,7 +2016,7 @@ th {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
   flex-direction: column;
 
   .search-wrap {
@@ -2179,6 +2179,10 @@ th {
   &:hover {
     background: #8565d1;
   }
+}
+
+.theme-btn-big {
+  padding: 12px 22px;
 }
 
 .theme-btn-small {
