--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8674,205 +8674,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #fbe064; }
+  background: #fa3540; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #51d315; }
+  background: #57b878; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #29c8ad; }
+  background: #e8ea50; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #367c60; }
+  background: #650bca; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #377408; }
+  background: #6b07ab; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1939a1; }
+  background: #c25fba; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #24ecf3; }
+  background: #55fc60; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2f5343; }
+  background: #3211ae; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #cd969c; }
+  background: #eba4ce; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #4e4f76; }
+  background: #200912; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #32814a; }
+  background: #176529; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #44b2c2; }
+  background: #e44024; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ff7b63; }
+  background: #9345a1; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #c8f05b; }
+  background: #7741b1; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #5e47c9; }
+  background: #4b62f1; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0a2d4a; }
+  background: #e58650; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #824f8f; }
+  background: #6fad48; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #3de2f6; }
+  background: #ffecc4; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #78d984; }
+  background: #060aba; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #3f8e03; }
+  background: #10265b; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0874a4; }
+  background: #aebf75; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #e7f155; }
+  background: #c533e1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a8efbf; }
+  background: #30d4e8; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #36adf2; }
+  background: #424b41; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e93ee7; }
+  background: #5629b5; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #15d15d; }
+  background: #27478f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #825613; }
+  background: #aa22ee; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b42851; }
+  background: #715193; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9eab4e; }
+  background: #2db3c7; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #88c798; }
+  background: #33b292; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d0e75d; }
+  background: #2143c7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #62e045; }
+  background: #f53bb4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #5f169a; }
+  background: #2edd65; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #84df27; }
+  background: #3e8619; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f940f1; }
+  background: #5b1a13; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #08ff43; }
+  background: #c71539; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #66b2f9; }
+  background: #d2fa9a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #709cd6; }
+  background: #8062b6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #deb0d0; }
+  background: #aad5e9; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d070c7; }
+  background: #cf758d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e0c86b; }
+  background: #e6ce04; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #668a59; }
+  background: #84fd9c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #21373a; }
+  background: #363dcb; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #500c5d; }
+  background: #27541b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9d9351; }
+  background: #6f50f9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #7f6d1a; }
+  background: #9e2c7b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9e3120; }
+  background: #4f9610; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3eb60b; }
+  background: #5ead53; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f505db; }
+  background: #4f955c; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0f33b5; }
+  background: #face01; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5572c9; }
+  background: #8175c0; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5616b1; }
+  background: #05c552; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8f999d; }
+  background: #da3eb9; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #736e81; }
+  background: #96c92b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b8c71e; }
+  background: #2b3916; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #126eb5; }
+  background: #13ec4d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #38eb6a; }
+  background: #a1d81e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e5ad57; }
+  background: #ccfc39; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9a2f90; }
+  background: #e692cc; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2ad155; }
+  background: #bcc713; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a2748e; }
+  background: #756eb6; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #f50d92; }
+  background: #f1ec46; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #4391fc; }
+  background: #1592fa; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #1f781a; }
+  background: #be56b0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #81e5b0; }
+  background: #1c1be2; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #066e69; }
+  background: #4e94fa; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c7f1bd; }
+  background: #d9caac; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #aa237e; }
+  background: #4b1723; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #06d5b4; }
+  background: #864ee2; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #76d8f6; }
+  background: #a97b26; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0fe053; }
+  background: #d144e6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #57d86d; }
+  background: #e357d3; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #926c6d; }
+  background: #56b4aa; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ce45d0; }
+  background: #f753f4; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #9bb187; }
+  background: #247bd8; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #4ba64a; }
+  background: #255e32; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b4c4c4; }
+  background: #228ccd; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f3e212; }
+  background: #728296; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #dc746e; }
+  background: #b3ede2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #79d997; }
+  background: #bde665; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #740b81; }
+  background: #44893a; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b2d6f5; }
+  background: #bd4cc5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c1254c; }
+  background: #21d052; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7cc6bf; }
+  background: #ea986c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #584bc4; }
+  background: #0c0724; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #655275; }
+  background: #5f2845; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e3d763; }
+  background: #bdd0c3; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #926e29; }
+  background: #c3ffa3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b487c2; }
+  background: #70eeb6; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #70b1a8; }
+  background: #0ea4b6; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #7d3732; }
+  background: #a3ad13; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #421e50; }
+  background: #4bc8f4; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2e83d3; }
+  background: #4e2f3a; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #27c6ac; }
+  background: #b7eb14; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #69ed05; }
+  background: #56c591; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #f54a73; }
+  background: #ad9b41; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cd2791; }
+  background: #f4b157; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ace1eb; }
+  background: #16e1af; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b2c438; }
+  background: #49bd74; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #42a754; }
+  background: #09be03; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
